<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameOfMentor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/signup_name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photoOfMentor4"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/chat_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangle3"
        android:layout_width="354dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="364dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_scheduled" />
    <ImageView
        android:id="@+id/rectangle4"
        android:layout_width="354dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="472dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_scheduled" />

    <TextView
        android:id="@+id/nameOfMentor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/meeting_details"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameOfMentor6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/inter"
        android:lineSpacingExtra="-2sp"
        android:text="@string/join_zoom"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/nameOfMentor5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="392dp"
        android:fontFamily="@font/inter"
        android:lineSpacingExtra="-2sp"
        android:text="@string/add_to_calendar"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/april_tue_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="304dp"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/meeting_date"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScheduledMeetings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:text="@string/meeting_details_title"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24" />
</androidx.constraintlayout.widget.ConstraintLayout>